# dataform-pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  dataform_bigquery_emulator_syntax_check.py  dataform_sqlfluff_lint.py  pyproject.toml
.github/workflows/: ci.yaml
hooks/: dataform-compile.sh  dataform-format.sh
